fix: correcting ShoppingList::display()